<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <groupId>com.github.wenweihu86.raft</groupId>
    <artifactId>raft-java-admin</artifactId>
    <version>1.9.0</version>
    <packaging>jar</packaging>

    <name>raft-java-admin</name>
    <url>http://maven.apache.org</url>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    </properties>

    <build>
        <plugins>
            <plugin>
             <groupId>org.apache.maven.plugins</groupId>
             <artifactId>maven-compiler-plugin</artifactId>
             <version>3.11.0</version> <!-- 使用最新版本 -->
             <configuration>
                 <source>17</source> <!-- 根据你的Java版本调整 -->
                 <target>17</target>
                 <compilerArgs>
                     <arg>--add-opens</arg>
                     <arg>jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED</arg>
                 </compilerArgs>
             </configuration>
         </plugin>
        </plugins>
    </build>

    <dependencies>
        <dependency>
            <groupId>com.github.wenweihu86.raft</groupId>
            <artifactId>raft-java-core</artifactId>
            <version>1.9.0</version>
        </dependency>
        <dependency>
            <groupId>org.apache.logging.log4j</groupId>
            <artifactId>log4j-slf4j-impl</artifactId>
            <version>2.9.1</version>
        </dependency>
        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <version>4.12</version>
            <scope>test</scope>
        </dependency>
    </dependencies>

</project>